deployments/go-testing/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: go-cloud-k8s-info-ingress
  namespace: go-testing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web,websecure
    traefik.ingress.kubernetes.io/router.tls: "true"
spec:
  rules:
    - host: go-cloud-k8s-info.lausanne.ch
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-cloud-k8s-info-service
                port:
                  number: 8000
    - host: go-cloud-k8s-info
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-cloud-k8s-info-service
                port:
                  number: 8000
  tls:
    - hosts:
        - go-cloud-k8s-info.lausanne.ch
      secretName: go-cloud-k8s-info-tls
