deployments/go-testing/traefic_ingress.yml
---
### go-cloud-k8s-info v0.4.11  : the version of the app image to deploy
### ghcr.io/lao-tseu-is-alive  : the prefix to your images in your container registry
kind: Ingress
apiVersion: networking.k8s.io/v1
metadata:
  name: go-cloud-k8s-info-ingress
  namespace: go-testing
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: web

spec:
  rules:
    - host: go-cloud-k8s-info.127.0.0.1.nip.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: go-cloud-k8s-info-service
                port:
                  number: 8000
